--- a/10-Regression.qmd
+++ b/10-Regression.qmd
@@ -865,11 +865,11 @@ Model performance improves on several fronts. The *RSE*, which measures average 
 
 > *Practice:* Try running stepwise regression on a different dataset, or compare `"forward"` and `"backward"` directions to `"both"`. Do all approaches lead to the same final model?
 
-### Strengths, Limitations, and Considerations for Stepwise Regression {.unnumbered}
+### Considerations for Stepwise Regression {.unnumbered}
 
 Stepwise regression offers a systematic approach to model selection, striking a balance between interpretability and computational efficiency. By iteratively refining the set of predictors, it helps identify a streamlined model without manually testing every possible combination. This makes it especially useful for moderate-sized datasets where full subset selection would be computationally intensive.
 
-However, stepwise regression also has important limitations. The algorithm proceeds sequentially, evaluating one variable at a time rather than considering all subsets of predictors exhaustively. As a result, it may miss interactions or combinations of variables that jointly improve model performance. It is also susceptible to *overfitting*, particularly when applied to small datasets with many predictors. In such cases, the model may capture random noise rather than meaningful relationships, reducing its ability to generalize to new data. Additionally, *multicollinearity* among predictors can distort coefficient estimates and inflate *p*-values, leading to misleading conclusions.
+However, stepwise regression also has some limitations. The algorithm proceeds sequentially, evaluating one variable at a time rather than considering all subsets of predictors exhaustively. As a result, it may miss interactions or combinations of variables that jointly improve model performance. It is also susceptible to *overfitting*, particularly when applied to small datasets with many predictors. In such cases, the model may capture random noise rather than meaningful relationships, reducing its ability to generalize to new data. Additionally, *multicollinearity* among predictors can distort coefficient estimates and inflate *p*-values, leading to misleading conclusions.
 
 For high-dimensional datasets or situations requiring more robust predictor selection, alternative methods such as *LASSO* (Least Absolute Shrinkage and Selection Operator) and *Ridge Regression* are often more effective. These regularization techniques introduce penalties for model complexity, which stabilizes coefficient estimates and improves predictive accuracy. For a detailed introduction to these methods, see [An Introduction to Statistical Learning with Applications in R](https://www.statlearning.com) [@gareth2013introduction].
 
