--- a/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
+++ b/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
@@ -8029,7 +8029,7 @@ Next, we examine another potential interaction: the relationship between
   \FunctionTok{geom\_point}\NormalTok{(}\AttributeTok{alpha =} \FloatTok{0.7}\NormalTok{) }\SpecialCharTok{+}
   \FunctionTok{scale\_color\_manual}\NormalTok{(}\AttributeTok{values =} \FunctionTok{c}\NormalTok{(}\StringTok{"palevioletred1"}\NormalTok{, }\StringTok{"darkseagreen1"}\NormalTok{)) }\SpecialCharTok{+} 
   \FunctionTok{geom\_point}\NormalTok{(}\AttributeTok{data =} \FunctionTok{data.frame}\NormalTok{(}\AttributeTok{day.mins =} \DecValTok{110}\NormalTok{, }\AttributeTok{customer.calls =} \FloatTok{5.5}\NormalTok{), }\AttributeTok{colour =} \StringTok{"orange"}\NormalTok{, }\AttributeTok{size =} \DecValTok{50}\NormalTok{, }\AttributeTok{shape =} \DecValTok{1}\NormalTok{) }\SpecialCharTok{+} 
-  \FunctionTok{geom\_point}\NormalTok{(}\AttributeTok{data =} \FunctionTok{data.frame}\NormalTok{(}\AttributeTok{day.mins =} \DecValTok{310}\NormalTok{, }\AttributeTok{customer.calls =} \FloatTok{2.0}\NormalTok{), }\AttributeTok{colour =} \StringTok{"orange"}\NormalTok{, }\AttributeTok{size =} \DecValTok{42}\NormalTok{, }\AttributeTok{shape =} \DecValTok{1}\NormalTok{)}
+  \FunctionTok{geom\_point}\NormalTok{(}\AttributeTok{data =} \FunctionTok{data.frame}\NormalTok{(}\AttributeTok{day.mins =} \DecValTok{310}\NormalTok{, }\AttributeTok{customer.calls =} \FloatTok{2.0}\NormalTok{), }\AttributeTok{colour =} \StringTok{"orange"}\NormalTok{, }\AttributeTok{size =} \DecValTok{40}\NormalTok{, }\AttributeTok{shape =} \DecValTok{1}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -17262,10 +17262,10 @@ or compare \texttt{"forward"} and \texttt{"backward"} directions to
 \texttt{"both"}. Do all approaches lead to the same final model?
 \end{quote}
 
-\subsection*{Strengths, Limitations, and Considerations for Stepwise
-Regression}\label{strengths-limitations-and-considerations-for-stepwise-regression}
-\addcontentsline{toc}{subsection}{Strengths, Limitations, and
-Considerations for Stepwise Regression}
+\subsection*{Considerations for Stepwise
+Regression}\label{considerations-for-stepwise-regression}
+\addcontentsline{toc}{subsection}{Considerations for Stepwise
+Regression}
 
 Stepwise regression offers a systematic approach to model selection,
 striking a balance between interpretability and computational
@@ -17274,17 +17274,17 @@ identify a streamlined model without manually testing every possible
 combination. This makes it especially useful for moderate-sized datasets
 where full subset selection would be computationally intensive.
 
-However, stepwise regression also has important limitations. The
-algorithm proceeds sequentially, evaluating one variable at a time
-rather than considering all subsets of predictors exhaustively. As a
-result, it may miss interactions or combinations of variables that
-jointly improve model performance. It is also susceptible to
-\emph{overfitting}, particularly when applied to small datasets with
-many predictors. In such cases, the model may capture random noise
-rather than meaningful relationships, reducing its ability to generalize
-to new data. Additionally, \emph{multicollinearity} among predictors can
-distort coefficient estimates and inflate \emph{p}-values, leading to
-misleading conclusions.
+However, stepwise regression also has some limitations. The algorithm
+proceeds sequentially, evaluating one variable at a time rather than
+considering all subsets of predictors exhaustively. As a result, it may
+miss interactions or combinations of variables that jointly improve
+model performance. It is also susceptible to \emph{overfitting},
+particularly when applied to small datasets with many predictors. In
+such cases, the model may capture random noise rather than meaningful
+relationships, reducing its ability to generalize to new data.
+Additionally, \emph{multicollinearity} among predictors can distort
+coefficient estimates and inflate \emph{p}-values, leading to misleading
+conclusions.
 
 For high-dimensional datasets or situations requiring more robust
 predictor selection, alternative methods such as \emph{LASSO} (Least
@@ -18376,11 +18376,11 @@ Regression with \emph{bank} Dataset}
   Plot the ROC curve and compute the AUC.
 \end{enumerate}
 
-\subsection*{\texorpdfstring{Hands-On Practice: Stepwise Regression with
-\emph{house}
+\subsubsection*{\texorpdfstring{Hands-On Practice: Stepwise Regression
+with \emph{house}
 Dataset}{Hands-On Practice: Stepwise Regression with house Dataset}}\label{hands-on-practice-stepwise-regression-with-house-dataset}
-\addcontentsline{toc}{subsection}{Hands-On Practice: Stepwise Regression
-with \emph{house} Dataset}
+\addcontentsline{toc}{subsubsection}{Hands-On Practice: Stepwise
+Regression with \emph{house} Dataset}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
